[package]
name = "chatty"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"

[dependencies]
tokio = { version = "1", features = ["full"] }
log = { version = "0.4" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
axum = { version = "0.7.1", features = ["macros"] }

[[bin]]
name = "client"

[[bin]]
name = "server"

