[package]
name = "chatty"
version = "1.0.0"
edition = "2021"
license-file = "LICENSE"

[dependencies]
tokio = { version = "1", features = ["full"] }
log = { version = "0.4" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
axum = { version = "0.7", features = ["macros", "ws"] }
futures = { version = "0.3" }
futures-util = { version = "0.3" }
reqwest = { version = "0.11", features = ["json"] }
tokio-tungstenite = { version = "0.17" }
chrono = { version = "0.4" }
uuid = { version = "1", features = ["v4"] }
base64 = = { version = "0.21" }

[[bin]]
name = "client"

[[bin]]
name = "server"

